@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-24T00:26:10Z",
-  "count_outdated" : 282,
-  "uniques_outdated" : 54,
+  "timestamp" : "2022-04-24T08:07:28Z",
+  "count_outdated" : 283,
+  "uniques_outdated" : 55,
   "count" : 302,
   "uniques" : 61,
   "views" : [
-    {
-      "timestamp": "2022-04-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 4,
