@@ -1,12 +1,7 @@
 {
-  "count": 20,
+  "count": 19,
   "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-04-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 4,
