@@ -1,3 +1,9 @@
+2022-04-24T08:07:28Z:
+* notice: last 14d: all unq: 19 4
+* notice: prev accum: outdated-all outdated-unq / all unq: 282 54 / 302 61
+* notice: next accum: outdated-all outdated-unq / all unq: 283 55 / 302 61
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-24T00:26:10Z:
 * notice: last 14d: all unq: 20 4
 * notice: prev accum: outdated-all outdated-unq / all unq: 276 53 / 302 61
